--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "author": "Himanshu Chhatwal",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3"
   }
 }
