--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Himanshu Chhatwal",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
